--- a/index.html
+++ b/index.html
@@ -90,11 +90,18 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="pic3.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Premiações</h2>
+									<p>Hackathons:</p>
+									<p>1° Lugar - Prêmio Jovem inovador (melhor Startup)</p>
+									<p>1° Lugar - Desafio Mão na Cevada (App)</p>
+									<p>1° Lugar - Global Legal Hackathon</p>
+									<p>2° Lugar - HackRibeirão (App)</p>
+
+
+									
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
