--- a/index.html
+++ b/index.html
@@ -94,11 +94,22 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Premiações</h2>
-									<p>Hackathons:</p>
+									<h3>Hackathons:</h3>
 									<p>1° Lugar - Prêmio Jovem inovador (melhor Startup)</p>
 									<p>1° Lugar - Desafio Mão na Cevada (App)</p>
 									<p>1° Lugar - Global Legal Hackathon</p>
 									<p>2° Lugar - HackRibeirão (App)</p>
+									<p>Finalista - Nasa App Challenge Ribeirão 2019</p>
+									<p>Top 5 Hackathon Solution - Hack 'A' Prev</p>
+									<p>Finalist Hackathon CCR - Top 30</p>
+
+									<h3>Competições Acadêmicas</h3>
+									Olimpiada Brasileira de Matemática (OBMEP) - 4 premiações entre medalhas e menções honrosas
+									Olimpiada de Biologia Barão de Maua - Prata
+									Olimpiada de Astronomia e Astrofísica (OBA) - Bronze
+									
+
+
 
 
 									
