--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<p>-> Pitch - Hackathon CCR </p>
 									<p>-> Palestra - Congresso da Sociedade Brasileira de Neurociências (SBNeC) </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://www.linkedin.com/in/jonathan-batista-ferreira-1b951b150/" class="button">Meu linkedIn</a></li>
 									</ul>
 								</div>
 							</div>
@@ -107,14 +107,14 @@
 									Olimpiada Brasileira de Matemática (OBMEP) - 4 premiações entre medalhas e menções honrosas
 									Olimpiada de Biologia Barão de Maua - Prata
 									Olimpiada de Astronomia e Astrofísica (OBA) - Bronze
-									
+
 
 
 
 
 									
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://www.linkedin.com/in/jonathan-batista-ferreira-1b951b150/" class="button">Meu linkedIn</a></li>
 									</ul>
 								</div>
 							</div>
