--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Jonathan B</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -104,9 +100,9 @@
 									<p>Finalist Hackathon CCR - Top 30</p>
 
 									<h3>Competições Acadêmicas</h3>
-									Olimpiada Brasileira de Matemática (OBMEP) - 4 premiações entre medalhas e menções honrosas
-									Olimpiada de Biologia Barão de Maua - Prata
-									Olimpiada de Astronomia e Astrofísica (OBA) - Bronze
+									<p>Olimpiada Brasileira de Matemática (OBMEP) - 4 premiações entre medalhas e menções honrosas</p>
+									<p>Olimpiada de Biologia Barão de Maua - Prata</p>
+									<p>Olimpiada de Astronomia e Astrofísica (OBA) - Bronze</p>
 
 
 
@@ -124,13 +120,13 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Projetos</h2>
+							<p>Aqui descreverei alguns projetos que estou desenvolvendo ou ajudei a desenvolver, alguns ainda estão em produção, mas em breve pretendo os disponibilizar.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3><a href="https://linktr.ee/neuron.dsai">Neuron - Data Science and Artificial Intelligence</a></h3>
+									<p>Criado em 2018, o grupo organizou durante os seus dois anos de existência mais de 50 eventos, entre eles treinamentos em Programação, Machine Learning, Deep Learning e Estátistica, além de diversos cursos e palestras em vários polos do estado de São Paulo.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
@@ -139,8 +135,8 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Machine Learning aplicado a Educação</h3>
+									<p>O artigo da Analíse ainda está em processo de producação e visará compreender os traços de personalidade que levam os alunos a ter possiveis atrasos no fluxo escolar</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
@@ -229,7 +225,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Jonathan Batista. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
