--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 									<p>Jonathan Batista</p>
 									<p>Ribeirão Preto ✈️ São Paulo</p>
 									<p>jonathanbf@usp.br</p>
-									<p>https://www.linkedin.com/in/jonathan-batista-ferreira-1b951b150/</p>
+									<p><a href="https://www.linkedin.com/in/jonathan-batista-ferreira-1b951b150/">Meu LinkedIn👥</a></p>
+									<p><a href="https://github.com/jonathanbff">Meu github💻</a></p>
 									
 									<h3>Olá meu nome é Jonathan Batista, sou cofundador do Grupo Neuron - Data Science and Artificial Intelligence, faço Iniciação Científica em Machine Learning no IME (Instituto de Matemática e Estatistica da USP) e estudo Ciências Moleculares pela Universidade de São Paulo.</h3>
 									<p>Tenho experiencia de freelancer em: UX designing, Analíse de Dados, Storytelling, Machine Learning e Trading
@@ -130,8 +131,8 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Automatização de Microexpressões Faciais</h3>
+									<p>Em processo (...).</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
@@ -140,86 +141,29 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Projeto de criptomoeda</h3>
+									<p>Projeto em andamento para criação de uma critomoeda baseada em recursos naturais.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Singularity U</h3>
+									<p>Liderança do Chapter de Ribeirão Preto do grupo Tecnologias Exponencias IA, Comp. Quântica, IoT, nanotecnologia
+										 </p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Designing UI/UX</h3>
+									<p>Criação de Apps e Websites em Figma e Adobe Xd, posso mostrar os projetos pessoalmente e em breve disponibilizarei em meu portifolio de freelancer.</p>
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="https://github.com/jonathanbff" class="button">Meu github💻</a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
 
-			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
