--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 						<ul>
 							<li><a href="#intro">Introdução</a></li>
 							<li><a href="#one">Quem Sou</a></li>
-							<li><a href="#two">O que faço</a></li>
-							<li><a href="#three">Projetos</a></li>
+							<li><a href="#two">Projetos</a></li>
+							
 						</ul>
 					</nav>
 				</div>
