trying to put some music :)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Saber mais</a></li>
 							</ul>
+							<embed src="https://www.youtube.com/embed/7_vz73m2Tk0?autoplay=1&controls=1&loop=1" loop="true" autostart="true" width="2" height="0">
 						</div>
 					</section>
 
