--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 					</nav>
 				</div>
 			</section>
+			 <div data-video="7_vz73m2Tk0"
+         			data-autoplay="1"
+         			data-loop="1"
+         			id="youtube-audio">
+  			</div>
+  			<script src="https://www.youtube.com/iframe_api"></script>
+  			<script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
